# forge

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  environment.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: REQUIREMENTS.md  requirements.yaml  soup.yaml
forge/: __init__.py  aggregator.py  cli.py  config.py  models.py
forge/collectors/: __init__.py  complexity.py  dead_code.py  dependency_health.py  mutation_testing.py  requirements_coverage.py  static_analysis.py  test_metrics.py  type_coverage.py
forge/scaffolder/: __init__.py  engine.py  github_setup.py
tests/: conftest.py
tests/integration/: test_aggregator.py  test_scaffolder.py
tests/unit/: test_cli.py  test_complexity.py  test_config.py  test_dependency_health.py  test_github_setup.py  test_models.py  test_requirements_coverage.py  test_test_metrics.py
